--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
       "license": "ISC",
       "dependencies": {
             "@types/express": "^4.17.21",
+            "ejs": "^3.1.9",
             "express": "^4.18.3",
             "nodemon": "^3.1.0",
             "pg": "^8.11.3",
