--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,8 @@
     "@expo/vector-icons": "^14.0.0",
     "@react-navigation/native": "^6.1.14",
     "@react-navigation/stack": "^6.3.25",
+    "@types/axios": "^0.14.0",
+    "axios": "^1.6.7",
     "expo": "~50.0.8",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
