--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,9 @@
       "author": "",
       "license": "ISC",
       "dependencies": {
+            "@types/cors": "^2.8.17",
             "@types/express": "^4.17.21",
+            "cors": "^2.8.5",
             "ejs": "^3.1.9",
             "express": "^4.18.3",
             "nodemon": "^3.1.0",
