--- a/server/package.json
+++ b/server/package.json
@@ -20,5 +20,8 @@
             "pg-hstore": "^2.3.4",
             "postgres": "^3.4.3",
             "sequelize": "^6.37.1"
+      },
+      "devDependencies": {
+            "tailwindcss": "^3.4.1"
       }
 }
