--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@expo/vector-icons": "^14.0.0",
     "@react-navigation/native": "^6.1.14",
     "@react-navigation/stack": "^6.3.25",
+    "@reduxjs/toolkit": "^2.2.1",
     "@types/axios": "^0.14.0",
     "axios": "^1.6.7",
     "expo": "~50.0.8",
@@ -24,7 +25,8 @@
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-track-player": "^4.0.1",
-    "react-native-web": "^0.19.10"
+    "react-native-web": "^0.19.10",
+    "react-redux": "^9.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
