--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@reduxjs/toolkit": "^2.2.1",
     "@types/axios": "^0.14.0",
     "axios": "^1.6.7",
+    "chalk": "^4.1.2",
     "expo": "~50.0.8",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
