--- a/client/package.json
+++ b/client/package.json
@@ -17,10 +17,12 @@
     "@react-navigation/stack": "^6.3.25",
     "@reduxjs/toolkit": "^2.2.1",
     "@types/axios": "^0.14.0",
+    "@types/jsonwebtoken": "^9.0.6",
     "axios": "^1.6.7",
     "chalk": "^4.1.2",
     "expo": "~50.0.8",
     "expo-status-bar": "~1.11.1",
+    "jsonwebtoken": "^9.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.4",
