--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
             "dotenv": "^16.4.5",
             "ejs": "^3.1.9",
             "express": "^4.18.3",
+            "express-rate-limit": "^7.2.0",
             "jsonwebtoken": "^9.0.2",
             "nodemon": "^3.1.0",
             "pg": "^8.11.3",
