--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,8 @@
   "dependencies": {
     "@expo/metro-runtime": "~3.1.3",
     "@expo/vector-icons": "^14.0.0",
-    "@react-native-async-storage/async-storage": "^1.23.1",
-    "@react-native-community/slider": "^4.5.0",
+    "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-native-community/slider": "4.4.2",
     "@react-navigation/native": "^6.1.14",
     "@react-navigation/stack": "^6.3.25",
     "@reduxjs/toolkit": "^2.2.1",
@@ -25,19 +25,19 @@
     "jsonwebtoken": "^9.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.73.4",
+    "react-native": "0.73.6",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-track-player": "^4.0.1",
-    "react-native-web": "^0.19.10",
+    "react-native-web": "~0.19.6",
     "react-redux": "^9.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
     "@types/react-native": "^0.73.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.3.0"
   },
   "private": true
 }
